welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:24: error: ')' expected but ';' found.
for (a<- 1 to 9) ( faireMotif(); if (a==3 || a==5 || a>6) {gauche()}
                               ^